src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #f5f5f4;
  --foreground: #000;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0c0a09;
    --foreground: #fff;
  }
}

body {
  color: rgb(var(--foreground));
  background: var(--background);
}

.react-tweet-theme {
  --tweet-bg-color: transparent !important;
  --tweet-border: 1px solid #404040 !important;
  --tweet-bg-color-hover: #000 !important;
}

.popup {
  position: absolute;
  background-color: #333;
  color: #fff;
  padding: 5px;
  border-radius: 5px;
  z-index: 999;
}

